--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>jsqlparser</artifactId>
             <version>5.3</version>
         </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.17.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.17.1</version>
+      </dependency>
     </dependencies>
     
     <build>
