--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>com.dbeditor</groupId>
-    <artifactId>visual-db-editor</artifactId>
+    <artifactId>pingloo-visual-db-editor</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Visual Database Editor</name>
+    <name>Pingloo - Visual Database Editor</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <javafx.version>20.0.1</javafx.version>
         <junit.version>5.10.2</junit.version>
     </properties>
@@ -60,11 +61,6 @@
             <version>12.6.1.jre11</version>
         </dependency>
 
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.17.1</version>
-      </dependency>
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
@@ -80,8 +76,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             
